--- a/game.html
+++ b/game.html
@@ -10,8 +10,14 @@ canvas {
 }
 </style>
 </head>
-<body onload="startGame()">
+<body>
+<div id="title" style="position:absolute;width:100%;height:60px;z-index:101;top:20px;text-align:center;font-size:60px;"> Shape-ish </div>
+<button id="startButton" style="position:absolute;width:100px;z-index:102;top:100px;left:47%;" onclick="startGame()">START</button>
+<button id="leftButton" style="display:none;position:absolute;width:100px;top:75%;left:40%;" onclick="analyseResult(1)">YES</button>
+<button id="rightButton" style="display:none;position:absolute;width:100px;top:75%;left:55%;" onclick="analyseResult(0)">NO</button>
+
 <script src="jquery.min.js"></script>
+<script src="shapes.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
